# nURSA-backend

./: .gitignore  get_rural_temps.ipynb  main.py  per_day_download.ipynb  pop_exposed.ipynb  pyproject.toml  radial.ipynb
ursa_backend/: app.py  dependencies.py  models.py
ursa_backend/code/: common.py  constants.py  dates.py  decorators.py  fs.py  geometry.py  suhi.py  world_cover.py
ursa_backend/routers/: suhi.py
